@@ -134,6 +134,9 @@ Font colour for selected users and files.
 \fB\-\-dir\-colour FFFFFF\fR
 Font colour for directories.
 .TP
+\fB\-\-dir\-name\-depth DEPTH\fR
+Draw names of directories down to a specific depth in the tree.
+.TP
 \fB\-\-file\-extensions\fR
 Show filename extensions only.
 .TP
