@@ -214,12 +214,19 @@ void RDirNode::setParent(RDirNode* parent) {
     this->parent = parent;
 
     adjustPath();
+    adjustDepth();
+}
 
-    //set depth
+void RDirNode::adjustDepth() {
+
     if(parent == 0) {
-        depth = 1.0;
+        depth = 1;
     } else {
         depth = parent->getDepth() + 1;
+    }
+
+    for(RDirNode* child : children) {
+        child->adjustDepth();
     }
 }
 
@@ -916,6 +923,7 @@ void RDirNode::logic(float dt) {
 void RDirNode::drawDirName(FXFont& dirfont) const{
     if(parent==0) return;
     if(gGourceSettings.hide_dirnames) return;
+    if(gGourceSettings.dir_name_depth > 0 && gGourceSettings.dir_name_depth < (depth-1)) return;
 
     if(!gGourceSettings.highlight_dirs && since_last_node_change > 5.0) return;
 
